add download archive support and improve error handling

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DOWNLOADER_COOKIES_PATH=path/to/your/cookies.txt
+DOWNLOADER_COOKIES_PATH=path/to/your/cookies.txt # for 18+ download support more info check https://github.com/yt-dlp/yt-dlp
 MAX_WORKERS=3
+USE_DOWNLOAD_ARCHIVE=false # "false"- skips based on file existence | "true" - skips based on the archive.txt (deleting the file will not re-download unless its ID is removed from the archive.)
