--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DOWNLOADER_COOKIES_PATH=path/to/your/cookies.txt # for 18+ download support more info check https://github.com/yt-dlp/yt-dlp
-MAX_WORKERS=3
+DOWNLOADER_CONFIG_DIR=path/to/your/config/dir # for configs to be stored archive.txt
+MAX_WORKERS=3 # number of workers to use for downloading
 USE_DOWNLOAD_ARCHIVE=false # "false"- skips based on file existence | "true" - skips based on the archive.txt (deleting the file will not re-download unless its ID is removed from the archive.)
