--- a/docker_compose.yml
+++ b/docker_compose.yml
@@ -5,6 +5,7 @@ services:
     ports:
       - "5000:5000"
     environment:
+      - ENABLE_DELETE=false # toggle delete UI and API
       - USE_DOWNLOAD_ARCHIVE=false # "false"- skips based on file existence | "true" - skips based on the archive.txt (deleting the file will not re-download unless its ID is removed from the archive.)
       - MAX_WORKERS=3
       - DOWNLOADER_COOKIES_PATH=/app/config/cookies.txt # for 18+ download support more info check https://github.com/yt-dlp/yt-dlp
